Fix invisible button in HealthAtoZ

--- a/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/healthAtoZ/healthAtoZ.scss
@@ -21,16 +21,20 @@
         }
 
         .search-input-field {
-            margin-bottom: 10px;
             display: flex;
+            width: 500px;
+            margin-bottom: 10px;
 
-            input {
-                width: 490px;
-                border: none;
-                font-weight: 600;
+            .search-text-field-input {
+                width: 100%;
 
-                &:focus {
-                    outline: none;
+                input {
+                    border: none;
+                    font-weight: 600;
+
+                    &:focus {
+                        outline: none;
+                    }
                 }
             }
 
